--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -9,7 +9,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/welcome"/>
+        android:src="@drawable/welcome"
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,44 +22,33 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Welcome To 👋"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/poppins_regular"/>
+            android:text="Welcome to 👋"
+            android:textColor="#212121"
+            android:textSize="30sp"
+            style="@style/Heading1"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Ecomm"
             android:textColor="@color/myTheme"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            android:layout_marginTop="-15dp"
-            android:fontFamily="@font/poppins_bold"/>
+            android:layout_marginTop="-20dp"
+            android:layout_marginBottom="-10dp"
+            style="@style/Title"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="The best plant e-commerce &amp; online store app of the century for your need!"
-            android:textSize="13sp"
-            android:textStyle="bold"
-            android:layout_marginTop="-10dp"
-            android:fontFamily="@font/poppins_regular"/>
+            android:textSize="16sp"
+            android:textColor="#424242"
+            android:fontFamily="@font/urbanist_semibold"/>
 
         <Button
             android:id="@+id/btnStarted"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:text="Get Started"
-            android:backgroundTint="@color/myTheme"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:paddingTop="12dp"
-            android:textAllCaps="false"
-            android:textSize="16sp"
-            android:fontFamily="@font/poppins_semibold"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            style="@style/EcommButton"/>
 
     </LinearLayout>
 
