--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,4 +11,22 @@
     </style>
 
     <style name="Theme.Ecomm" parent="Base.Theme.Ecomm" />
+    <style name="EcommButton">
+        <item name="android:background">@drawable/button_shape</item>
+        <item name="android:fontFamily">@font/urbanist_bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+    </style>
+    <style name="Title">
+        <item name="android:fontFamily">@font/urbanist_black</item>
+        <item name="android:textSize">70dp</item>
+    </style>
+    <style name="Heading1">
+        <item name="android:fontFamily">@font/urbanist_bold</item>
+        <item name="android:textSize">48dp</item>
+    </style>
 </resources>
