--- a/app/src/main/res/drawable/email.xml
+++ b/app/src/main/res/drawable/email.xml
@@ -1,5 +1,10 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M20,4L4,4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2L22,6c0,-1.1 -0.9,-2 -2,-2zM19.6,8.25l-7.07,4.42c-0.32,0.2 -0.74,0.2 -1.06,0L4.4,8.25c-0.25,-0.16 -0.4,-0.43 -0.4,-0.72 0,-0.67 0.73,-1.07 1.3,-0.72L12,11l6.7,-4.19c0.57,-0.35 1.3,0.05 1.3,0.72 0,0.29 -0.15,0.56 -0.4,0.72z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M16.939,3C18.28,3 19.57,3.53 20.519,4.481C21.469,5.43 22,6.71 22,8.05V15.95C22,18.74 19.73,21 16.939,21H7.06C4.269,21 2,18.74 2,15.95V8.05C2,5.26 4.259,3 7.06,3H16.939ZM18.53,9.54L18.61,9.46C18.849,9.17 18.849,8.75 18.599,8.46C18.46,8.311 18.269,8.22 18.07,8.2C17.86,8.189 17.66,8.26 17.509,8.4L13,12C12.42,12.481 11.589,12.481 11,12L6.5,8.4C6.189,8.17 5.759,8.2 5.5,8.47C5.23,8.74 5.2,9.17 5.429,9.47L5.56,9.6L10.11,13.15C10.67,13.59 11.349,13.83 12.06,13.83C12.769,13.83 13.46,13.59 14.019,13.15L18.53,9.54Z"
+      android:fillColor="#212121"
+      android:fillType="evenOdd"/>
 </vector>
