--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -7,77 +7,19 @@
     android:orientation="vertical"
     tools:context=".Screens.DashboardActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/logo"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="comm"
-            android:fontFamily="@font/urbanist_bold"
-            android:textSize="38sp"
-            android:textColor="@color/textColor"
-            android:translationX="-15dp"
-            android:layout_weight="1"/>
-
-        <ImageView
-            android:id="@+id/logout"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/poweroff"
-            app:tint="@color/myTheme"
-            android:layout_marginRight="10dp"/>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="end"
-            android:layout_marginRight="10dp"
-            >
-            <TextView
-                android:id="@+id/roleTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Role"
-                android:textColor="#757575"
-                android:textSize="12sp"
-                android:fontFamily="@font/urbanist_medium"/>
-
-            <TextView
-                android:id="@+id/nameTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Andrew Sam"
-                android:textColor="@color/textColor"
-                android:textSize="15sp"
-                android:layout_marginTop="-5dp"
-                android:fontFamily="@font/urbanist_bold"/>
-        </LinearLayout>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/logo"
-            app:civ_border_color="@color/myTheme"
-            app:civ_border_width="2dp"
-            android:layout_marginRight="10dp"/>
-
-    </LinearLayout>
-
     <FrameLayout
         android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomAppBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/white"
+        app:menu="@menu/bottom_menu"
+        app:itemTextAppearanceActive="@style/BottomNavigationViewTextStyleActive"
+        app:itemTextAppearanceInactive="@style/BottomNavigationViewTextStyle"/>
 
 </LinearLayout>
