--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -16,15 +16,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="bottom"
-        android:padding="20dp">
+        android:gravity="bottom">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Welcome to 👋"
             android:textColor="#212121"
-            android:textSize="30sp"
+            android:textSize="40sp"
+            android:layout_marginHorizontal="20dp"
             style="@style/Heading1"/>
 
         <TextView
@@ -33,7 +33,7 @@
             android:text="Ecomm"
             android:textColor="@color/myTheme"
             android:layout_marginTop="-20dp"
-            android:layout_marginBottom="-10dp"
+            android:layout_marginHorizontal="20dp"
             style="@style/Title"/>
 
         <TextView
@@ -42,12 +42,15 @@
             android:text="The best plant e-commerce &amp; online store app of the century for your need!"
             android:textSize="16sp"
             android:textColor="#424242"
+            android:layout_marginHorizontal="20dp"
             android:fontFamily="@font/urbanist_semibold"/>
 
         <Button
             android:id="@+id/btnStarted"
             android:text="Get Started"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="20dp"
             style="@style/EcommButton"/>
 
     </LinearLayout>
