--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="myTheme">#08C970</color>
-    <color name="myThemeLight">#40F3A0</color>
+    <color name="myTheme">#01B763</color>
+    <color name="myThemeLight">#67D4A1</color>
     <color name="textColor">#212121</color>
 </resources>
