--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -7,47 +7,202 @@
     app:cardUseCompatPadding="true"
     app:cardElevation="5dp">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="15dp"
-        android:gravity="center">
+        android:layout_height="wrap_content">
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:text="Add Plant"
-            android:fontFamily="@font/urbanist_bold"
-            android:textSize="25sp"
-            android:textColor="@color/myTheme"/>
-
-        <com.google.android.material.textfield.TextInputLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Plant Name"
-            app:endIconMode="clear_text"
-            app:errorEnabled="true"
-            app:counterEnabled="true"
-            app:counterMaxLength="30"
-            app:helperTextEnabled="true"
-            app:helperText="Only Text Allowed"
-            app:startIconDrawable="@drawable/leaf"
-            app:startIconTint="@color/myTheme"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            >
+            android:orientation="vertical"
+            android:padding="15dp"
+            android:gravity="center">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:text="Add Plant"
+                android:fontFamily="@font/urbanist_bold"
+                android:textSize="25sp"
+                android:textColor="@color/myTheme"/>
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/image"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:src="@drawable/logo" />
+
+                <ImageButton
+                    android:id="@+id/imageadd"
+                    android:layout_gravity="end|bottom"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/border_radius"
+                    android:src="@drawable/edit"
+                    android:backgroundTint="@color/white"
+                    android:pointerIcon="arrow"
+                    app:tint="@color/myTheme" />
+
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/imageErrTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:text="Image Error"
+                android:textColor="#DA0000"
+                android:textSize="11sp"
+                android:visibility="gone"
+                android:backgroundTint="@color/white"
+                android:textStyle="bold|italic" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/pName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLength="30"
-                android:inputType="textPersonName"/>
+                android:hint="Enter Name"
+                app:endIconMode="clear_text"
+                app:errorEnabled="true"
+                app:counterEnabled="true"
+                app:counterMaxLength="30"
+                app:helperTextEnabled="true"
+                app:helperText="Only Text Allowed"
+                app:startIconDrawable="@drawable/leaf"
+                app:startIconTint="@color/myTheme"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                >
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/pNameEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLength="30"
+                    android:inputType="textPersonName"/>
 
-    </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/pDescription"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter Description"
+                app:counterEnabled="true"
+                app:counterMaxLength="1000"
+                app:endIconMode="clear_text"
+                app:errorEnabled="true"
+                app:helperText="Only Text Allowed!!!"
+                app:startIconDrawable="@drawable/user_fill"
+                app:startIconTint="@color/myTheme">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/pDescriptionEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:maxLength="1000"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/pPrice"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter Price"
+                app:counterEnabled="true"
+                app:counterMaxLength="8"
+                app:endIconMode="clear_text"
+                app:errorEnabled="true"
+                app:helperText="Only Number Allowed!!!"
+                app:startIconDrawable="@drawable/user_fill"
+                app:startIconTint="@color/myTheme">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/pPriceEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="8"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/pStock"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter Stock"
+                app:counterEnabled="true"
+                app:counterMaxLength="4"
+                app:endIconMode="clear_text"
+                app:errorEnabled="true"
+                app:helperText="Only Number Allowed!!!"
+                app:startIconDrawable="@drawable/user_fill"
+                app:startIconTint="@color/myTheme">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/pStockEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="4"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/myCard"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="-10dp">
+
+                <Button
+                    android:id="@+id/cancelBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/border_radius"
+                    android:backgroundTint="@color/white"
+                    android:padding="10sp"
+                    android:text="Cancel"
+                    android:textColor="@color/myTheme"
+                    android:textSize="15sp" />
+
+                <Button
+                    android:id="@+id/saveChangesBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/border_radius"
+                    android:padding="10sp"
+                    android:text="Save Changes"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </androidx.cardview.widget.CardView>
