--- a/app/src/main/res/layout/product_listview.xml
+++ b/app/src/main/res/layout/product_listview.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/item">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="130dp"
@@ -39,6 +40,7 @@
             android:paddingHorizontal="10dp"
             android:fontFamily="@font/urbanist_bold"
             android:alpha="0.8"
+            android:visibility="gone"
             android:textSize="10dp"/>
 
         <LinearLayout
@@ -48,7 +50,8 @@
             android:orientation="vertical"
             android:layout_gravity="bottom|right"
             android:alpha="0.6"
-            android:layout_margin="15dp">
+            android:layout_margin="15dp"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/editBtn"
@@ -117,14 +120,34 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/pPrice"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="$23"
-        android:fontFamily="@font/urbanist_bold"
-        android:textColor="@color/myTheme"
-        android:textSize="18dp"
-        android:layout_marginVertical="5dp"/>
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/pPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="$23"
+            android:fontFamily="@font/urbanist_bold"
+            android:textColor="@color/myTheme"
+            android:textSize="18sp"
+            android:layout_marginRight="5dp"
+            android:layout_marginVertical="5dp"/>
+
+        <TextView
+            android:id="@+id/pPriceOff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="$23"
+            android:fontFamily="@font/urbanist_bold"
+            android:textColor="#9F9F9F"
+            android:textSize="13sp"
+            android:layout_marginVertical="5dp"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
