--- a/app/src/main/res/drawable/filter.xml
+++ b/app/src/main/res/drawable/filter.xml
@@ -4,33 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M10.33,16.593H4.029"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#212121"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M13.141,6.9H19.441"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#212121"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M8.726,6.846C8.726,5.551 7.668,4.5 6.363,4.5C5.058,4.5 4,5.551 4,6.846C4,8.142 5.058,9.193 6.363,9.193C7.668,9.193 8.726,8.142 8.726,6.846Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:fillType="evenOdd"
-      android:strokeColor="#212121"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M20,16.554C20,15.258 18.943,14.208 17.638,14.208C16.332,14.208 15.274,15.258 15.274,16.554C15.274,17.849 16.332,18.9 17.638,18.9C18.943,18.9 20,17.849 20,16.554Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:fillType="evenOdd"
-      android:strokeColor="#212121"
-      android:strokeLineCap="round"/>
+      android:pathData="M8.878,6.379C8.878,8.245 7.339,9.758 5.439,9.758C3.54,9.758 2,8.245 2,6.379C2,4.513 3.54,3 5.439,3C7.339,3 8.878,4.513 8.878,6.379ZM20.493,4.898C21.324,4.898 22,5.562 22,6.379C22,7.196 21.324,7.86 20.493,7.86H13.918C13.086,7.86 12.41,7.196 12.41,6.379C12.41,5.562 13.086,4.898 13.918,4.898H20.493ZM3.508,15.958H10.083C10.915,15.958 11.591,16.622 11.591,17.439C11.591,18.256 10.915,18.921 10.083,18.921H3.508C2.676,18.921 2,18.256 2,17.439C2,16.622 2.676,15.958 3.508,15.958ZM18.561,20.778C20.461,20.778 22,19.265 22,17.399C22,15.533 20.461,14.02 18.561,14.02C16.662,14.02 15.122,15.533 15.122,17.399C15.122,19.265 16.662,20.778 18.561,20.778Z"
+      android:fillColor="#212121"
+      android:fillType="evenOdd"/>
 </vector>
