--- a/app/src/main/res/drawable/bottom_sheet_bg.xml
+++ b/app/src/main/res/drawable/bottom_sheet_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#EDEDED"/>
-    <corners android:radius="15dp"/>
+    <solid android:color="@color/white"/>
+    <corners android:topRightRadius="50dp" android:topLeftRadius="50dp"/>
 </shape>
