--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -57,25 +57,171 @@
                 app:tint="#A6A6A6" />
 
             <EditText
+                android:id="@+id/searchEditText"
                 android:layout_width="wrap_content"
                 android:layout_height="55dp"
                 android:layout_weight="1"
                 android:hint="Search Here"
                 android:textColorHint="#BDBDBD"
                 android:layout_marginHorizontal="10dp"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textColor="#686868"
                 android:background="@color/transparent"
                 android:maxLines="1"
                 android:minLines="1"
-                android:maxLength="40"
+                android:maxLength="30"
                 android:fontFamily="@font/urbanist_regular"/>
 
             <ImageView
+                android:id="@+id/clear_text"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/close"
+                app:tint="#CACACA"
+                android:visibility="gone"
+                android:layout_marginRight="10dp"/>
+
+            <ImageView
+                android:id="@+id/filterBtn"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:src="@drawable/filter"
                 app:tint="@color/myTheme" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='Result for “'
+                android:fontFamily="@font/urbanist_bold"
+                android:textColor="@color/textColor"
+                android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/searchedWord"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='search here...'
+                android:fontFamily="@font/urbanist_bold"
+                android:textColor="@color/myTheme"
+                android:maxLength="20"
+                android:textSize="20sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='”'
+                android:fontFamily="@font/urbanist_bold"
+                android:textColor="@color/textColor"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/totalCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAlignment="textEnd"
+                android:text='0 found'
+                android:fontFamily="@font/urbanist_bold"
+                android:textColor="@color/myTheme"
+                android:textSize="16sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/notfoundContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:src="@drawable/not_found_frame"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginTop="30dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Not Found"
+                    android:fontFamily="@font/urbanist_bold"
+                    android:textColor="@color/textColor"
+                    android:textSize="24sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sorry, the keyword you entered cannot be found, please check again or search with another keyword."
+                    android:fontFamily="@font/urbanist_regular"
+                    android:textColor="@color/textColor"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"
+                    android:textSize="18sp"/>
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/searchContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="visible"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:src="@drawable/search_frame"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginTop="30dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Search Products"
+                    android:fontFamily="@font/urbanist_bold"
+                    android:textColor="@color/textColor"
+                    android:textSize="24sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="The keyword you entered can be found."
+                    android:fontFamily="@font/urbanist_regular"
+                    android:textColor="@color/textColor"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"
+                    android:textSize="18sp"/>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -84,11 +230,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:numColumns="2"
-            android:verticalSpacing="10dp"
             android:horizontalSpacing="10dp"
-            android:paddingHorizontal="10dp"
-            tools:listitem="@layout/product_listview"/>
+            android:numColumns="2"
+            android:paddingHorizontal="20dp"
+            android:verticalSpacing="10dp"
+            android:visibility="gone"
+            tools:listitem="@layout/product_listview" />
 
     </LinearLayout>
 
