--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Screens.Fragments.AccountFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,6 +35,131 @@
 
         </LinearLayout>
 
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/image"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:src="@drawable/logo" />
+
+            <ImageButton
+                android:id="@+id/imageadd"
+                android:layout_gravity="end|bottom"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/border_radius"
+                android:src="@drawable/edit"
+                android:backgroundTint="#CCFFFFFF"
+                android:pointerIcon="arrow"
+                app:tint="@color/myTheme" />
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Your Name"
+            android:fontFamily="@font/urbanist_bold"
+            android:textColor="@color/textColor"
+            android:textSize="24sp"
+            android:textAlignment="center"
+            android:layout_marginTop="5dp"/>
+
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ecom@gmail.com"
+            android:fontFamily="@font/urbanist_semibold"
+            android:textColor="@color/textColor"
+            android:textSize="14sp"
+            android:layout_marginTop="5dp"
+            android:textAlignment="center"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@drawable/line"
+            android:backgroundTint="#EEEEEE"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:background="@drawable/search_bg"
+            android:backgroundTint="@color/white"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            android:paddingVertical="15dp"
+            android:paddingHorizontal="10dp">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/user_outlined"
+                app:tint="@color/textColor" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="10dp"
+                android:text="Edit Profile"
+                android:textAlignment="textStart"
+                android:textColor="@color/textColor"
+                android:fontFamily="@font/urbanist_semibold"
+                android:textSize="18sp"/>
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/arrow_right"
+                app:tint="@color/textColor" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/logoutBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:background="@drawable/search_bg"
+            android:backgroundTint="@color/white"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            android:paddingVertical="15dp"
+            android:paddingHorizontal="10dp">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/logout"
+                app:tint="#F75555" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="10dp"
+                android:text="Logout"
+                android:textAlignment="textStart"
+                android:textColor="#F75555"
+                android:fontFamily="@font/urbanist_semibold"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
