--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -41,7 +41,7 @@
             android:layout_marginVertical="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/image"
+                android:id="@+id/profileimage"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerVertical="true"
@@ -49,7 +49,7 @@
                 android:src="@drawable/logo" />
 
             <ImageButton
-                android:id="@+id/imageadd"
+                android:id="@+id/editadd"
                 android:layout_gravity="end|bottom"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
