--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="15dp"
+            style="@style/screenBg"
             android:gravity="center">
 
             <TextView
@@ -49,9 +50,9 @@
                     android:layout_height="40dp"
                     android:background="@drawable/border_radius"
                     android:src="@drawable/edit"
-                    android:backgroundTint="#CCFFFFFF"
                     android:pointerIcon="arrow"
-                    app:tint="@color/myTheme" />
+                    app:tint="@color/myTheme"
+                    style="@style/searchBg"/>
 
             </FrameLayout>
 
@@ -206,9 +207,7 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:textColor="@color/myTheme"
-                    android:backgroundTint="@color/white"
-                    style="@style/EcommButton"/>
+                    style="@style/EcommButtonSecondary"/>
 
                 <Button
                     android:id="@+id/saveChangesBtn"
