--- a/app/src/main/res/drawable/facebook_img.xml
+++ b/app/src/main/res/drawable/facebook_img.xml
@@ -1,16 +1,28 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="256dp"
-    android:height="256dp"
-    android:viewportWidth="256"
-    android:viewportHeight="256">
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="25dp"
+    android:height="25dp"
+    android:viewportWidth="25"
+    android:viewportHeight="25">
   <group>
     <clip-path
-        android:pathData="M0,0h256v256h-256z"/>
+        android:pathData="M0.5,0.8h24v24h-24z"/>
     <path
-        android:pathData="M256,128C256,57.31 198.69,0 128,0C57.31,0 0,57.31 0,128C0,191.89 46.81,244.84 108,254.45V165H75.5V128H108V99.8C108,67.72 127.11,50 156.35,50C170.35,50 185,52.5 185,52.5V84H168.86C152.96,84 148,93.87 148,103.99V128H183.5L177.82,165H148V254.45C209.19,244.84 256,191.89 256,128Z"
-        android:fillColor="#1877F2"/>
+        android:pathData="M12.5,0.8C5.872,0.8 0.5,6.172 0.5,12.8C0.5,19.427 5.872,24.8 12.5,24.8C19.128,24.8 24.5,19.427 24.5,12.8C24.5,6.172 19.128,0.8 12.5,0.8Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="4.096"
+            android:startY="4.396"
+            android:endX="22.469"
+            android:endY="22.769"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF2AA4F4"/>
+          <item android:offset="1" android:color="#FF007AD9"/>
+        </gradient>
+      </aapt:attr>
+    </path>
     <path
-        android:pathData="M177.82,165L183.5,128H148V103.99C148,93.87 152.96,84 168.86,84H185V52.5C185,52.5 170.35,50 156.35,50C127.11,50 108,67.72 108,99.8V128H75.5V165H108V254.45C114.62,255.48 121.3,256 128,256C134.7,256 141.38,255.48 148,254.45V165H177.82Z"
+        android:pathData="M14.229,17.658H17.485L17.997,14.349H14.229V12.541C14.229,11.167 14.678,9.948 15.963,9.948H18.029V7.062C17.666,7.013 16.898,6.906 15.448,6.906C12.419,6.906 10.644,8.505 10.644,12.149V14.35H7.53V17.658H10.643V26.751C11.259,26.843 11.884,26.906 12.525,26.906C13.105,26.906 13.67,26.853 14.229,26.777V17.658Z"
         android:fillColor="#ffffff"/>
   </group>
 </vector>
