--- a/app/src/main/res/drawable/image_shape_dark.xml
+++ b/app/src/main/res/drawable/image_shape_dark.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/myTheme" android:width="1dp"/>
-    <corners android:radius="5dp"/>
+    <solid android:color="#1F222A"/>
+    <corners android:radius="15dp"/>
+    <stroke android:color="#35383F" android:width="1dp"/>
 </shape>
