--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    style="@style/screenBg"
     tools:context=".Screens.LoginActivity">
 
 <LinearLayout
@@ -18,7 +19,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/back"
-        app:tint="@color/textColor" />
+        style="@style/iconColor"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,9 +39,9 @@
             android:layout_height="wrap_content"
             android:text="comm"
             android:textSize="35sp"
-            android:textColor="@color/textColor"
             android:translationX="-20dp"
-            android:fontFamily="@font/righteous_regular"/>
+            android:fontFamily="@font/righteous_regular"
+            style="@style/textColor"/>
 
     </LinearLayout>
 
@@ -50,10 +51,10 @@
         android:text="Login Your Account"
         android:textSize="25sp"
         android:textAlignment="center"
-        android:textColor="@color/textColor"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/poppins_semibold"/>
+        android:fontFamily="@font/poppins_semibold"
+        style="@style/textColor"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailLayout"
@@ -72,9 +73,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:textColor="@color/textColor"
             android:fontFamily="@font/poppins_regular"
-            android:maxLength="40"/>
+            android:maxLength="40"
+            style="@style/textColor"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -96,9 +97,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:textColor="@color/textColor"
             android:fontFamily="@font/poppins_regular"
-            android:maxLength="20"/>
+            android:maxLength="20"
+            style="@style/textColor"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -116,7 +117,7 @@
             android:buttonTint="@color/myTheme"
             android:textSize="12sp"
             android:layout_weight="1"
-            android:textColor="@color/textColor"/>
+            style="@style/textColor"/>
 
         <TextView
             android:id="@+id/forgotBtn"
@@ -148,23 +149,26 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/line_shape"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            style="@style/searchBg"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="or continue with"
             android:textStyle="bold"
-            android:fontFamily="@font/poppins_regular"
+            android:fontFamily="@font/urbanist_regular"
             android:textSize="14sp"
             android:textAlignment="center"
-            android:layout_marginHorizontal="5dp"/>
+            android:layout_marginHorizontal="5dp"
+            style="@style/textColorLight"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/line_shape"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            style="@style/searchBg"/>
 
     </LinearLayout>
 
@@ -194,9 +198,9 @@
         <ImageView
             android:layout_width="90dp"
             android:layout_height="70dp"
-            android:src="@drawable/apple_img"
             android:background="@drawable/image_shape"
-            android:padding="20dp"/>
+            android:padding="20dp"
+            style="@style/appleImage"/>
 
     </LinearLayout>
     
