--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    style="@style/screenBg"
     tools:context=".Screens.ProductsActivity">
 
 
@@ -25,8 +26,8 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/back"
-                app:tint="@color/textColor"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginRight="10dp"
+                style="@style/iconColor"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -34,15 +35,15 @@
                 android:text="Products"
                 android:fontFamily="@font/urbanist_bold"
                 android:textSize="28sp"
-                android:textColor="@color/textColor"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                style="@style/textColor"/>
 
             <ImageView
                 android:id="@+id/search"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/search"
-                app:tint="@color/textColor"/>
+                style="@style/iconColor"/>
 
         </LinearLayout>
 
