--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,14 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        style="@style/screenBg">
 
         <ImageView
             android:id="@+id/backBtn"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/back"
-            app:tint="@color/textColor" />
+            style="@style/iconColor"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,9 +38,9 @@
                 android:layout_height="wrap_content"
                 android:text="comm"
                 android:textSize="35sp"
-                android:textColor="@color/textColor"
                 android:translationX="-20dp"
-                android:fontFamily="@font/righteous_regular"/>
+                android:fontFamily="@font/righteous_regular"
+                style="@style/textColor"/>
 
         </LinearLayout>
 
@@ -49,10 +50,10 @@
             android:text="Create Your Account"
             android:textSize="25sp"
             android:textAlignment="center"
-            android:textColor="@color/textColor"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
-            android:fontFamily="@font/poppins_semibold"/>
+            android:fontFamily="@font/poppins_semibold"
+            style="@style/textColor"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/nameLayout"
@@ -75,9 +76,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:textColor="@color/textColor"
                 android:fontFamily="@font/poppins_regular"
-                android:maxLength="20"/>
+                android:maxLength="20"
+                style="@style/textColor"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -102,9 +103,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:textColor="@color/textColor"
                 android:fontFamily="@font/poppins_regular"
-                android:maxLength="40"/>
+                android:maxLength="40"
+                style="@style/textColor"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -130,9 +131,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:textColor="@color/textColor"
                 android:fontFamily="@font/poppins_regular"
-                android:maxLength="20"/>
+                android:maxLength="20"
+                style="@style/textColor"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -158,9 +159,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:textColor="@color/textColor"
                 android:fontFamily="@font/poppins_regular"
-                android:maxLength="20"/>
+                android:maxLength="20"
+                style="@style/textColor"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -181,23 +182,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/line_shape"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                style="@style/searchBg"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="or continue with"
                 android:textStyle="bold"
-                android:fontFamily="@font/poppins_regular"
+                android:fontFamily="@font/urbanist_regular"
                 android:textSize="14sp"
                 android:textAlignment="center"
-                android:layout_marginHorizontal="5dp"/>
+                android:layout_marginHorizontal="5dp"
+                style="@style/textColorLight"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@drawable/line_shape"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                style="@style/searchBg"/>
 
         </LinearLayout>
 
