--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="15dp">
+        android:padding="15dp"
+        style="@style/screenBg">
 
         <TextView
             android:layout_width="match_parent"
@@ -33,12 +34,10 @@
             <Button
                 android:id="@+id/cancelBtn"
                 android:text="Cancel"
-                android:textColor="@color/myTheme"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
-                android:backgroundTint="@color/myThemeExtraLight"
                 android:layout_margin="10dp"
-                style="@style/EcommButton"/>
+                style="@style/EcommButtonSecondary"/>
 
             <Button
                 android:id="@+id/yesBtn"
