--- a/app/src/main/res/layout/fragment_wishlist.xml
+++ b/app/src/main/res/layout/fragment_wishlist.xml
@@ -3,86 +3,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Screens.Fragments.WishlistFragment">
+    tools:context=".Screens.Fragments.WishlistFragment"
+    style="@style/screenBg">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/logo"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Wishlist"
+            android:fontFamily="@font/urbanist_bold"
+            android:textSize="28sp"
+            android:translationX="-5dp"
+            android:layout_weight="1"
+            style="@style/textColor"/>
+
+        <ImageView
+            android:id="@+id/search"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/search"
+            android:layout_marginRight="15dp"
+            style="@style/iconColor"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/notfoundContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_marginHorizontal="20dp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            style="@style/notFoundImage"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/logo"/>
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_marginTop="30dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Wishlist"
+                android:text="You don't have a favorite product"
                 android:fontFamily="@font/urbanist_bold"
-                android:textSize="28sp"
-                android:translationX="-5dp"
-                android:textColor="@color/textColor"
-                android:layout_weight="1"/>
+                android:textSize="24sp"
+                style="@style/textColor"/>
 
-            <ImageView
-                android:id="@+id/search"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/search"
-                app:tint="@color/textColor"
-                android:layout_marginRight="15dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/notfoundContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_marginHorizontal="20dp"
-            android:gravity="center">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:src="@drawable/not_found_frame"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_marginTop="30dp">
+                android:text="You don't have a wishlist products at this time"
+                android:fontFamily="@font/urbanist_regular"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:textSize="18sp"
+                style="@style/textColorLight"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="You don't have a favorite product"
-                    android:fontFamily="@font/urbanist_bold"
-                    android:textColor="@color/textColor"
-                    android:textSize="24sp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="You don't have a wishlist products at this time"
-                    android:fontFamily="@font/urbanist_regular"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:layout_marginTop="10dp"
-                    android:textSize="18sp"/>
-
-
-            </LinearLayout>
 
         </LinearLayout>
 
