--- a/app/src/main/res/layout/product_recyleview.xml
+++ b/app/src/main/res/layout/product_recyleview.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="250dp"
     android:orientation="vertical"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:id="@+id/item">
 
     <FrameLayout
@@ -152,5 +152,6 @@
             android:backgroundTint="#9F9F9F"/>
 
     </LinearLayout>
+
 
 </LinearLayout>
