--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,6 +35,17 @@
         <item name="android:layout_height">50dp</item>
         <item name="android:gravity">center</item>
     </style>
+    <style name="EcommButtonSecondary">
+        <item name="android:background">@drawable/button_shape</item>
+        <item name="android:backgroundTint">#E6F8EF</item>
+        <item name="android:fontFamily">@font/urbanist_bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/myTheme</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:gravity">center</item>
+    </style>
     <style name="Title">
         <item name="android:fontFamily">@font/urbanist_black</item>
         <item name="android:textSize">70dp</item>
@@ -43,4 +54,33 @@
         <item name="android:fontFamily">@font/urbanist_bold</item>
         <item name="android:textSize">48dp</item>
     </style>
+    <style name="textColor">
+        <item name="android:textColor">#212121</item>
+    </style>
+    <style name="textColorLight">
+        <item name="android:textColor">#616161</item>
+    </style>
+    <style name="iconColor">
+        <item name="android:tint">#212121</item>
+    </style>
+    <style name="productBgColor">
+        <item name="android:backgroundTint">#F1F1F1</item>
+    </style>
+    <style name="screenBg">
+        <item name="android:background">#fff</item>
+    </style>
+    <style name="bgTint">
+        <item name="android:backgroundTint">#fff</item>
+    </style>
+    <style name="searchBg">
+        <item name="android:backgroundTint">#EDEDED</item>
+    </style>
+    <style name="notFoundImage">
+        <item name="android:src">@drawable/not_found_frame</item>
+    </style>
+    <style name="appleImage">
+        <item name="android:src">@drawable/apple_img_dark</item>
+    </style>
+
+
 </resources>
