--- a/app/src/main/res/drawable/shade_bg.xml
+++ b/app/src/main/res/drawable/shade_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/>
-    <corners android:radius="15dp"/>
-    <stroke android:color="#EEEEEE" android:width="1dp"/>
+    <gradient android:angle="-90"
+        android:startColor="@color/transparent"
+        android:endColor="@color/black"/>
 </shape>
