--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -179,28 +179,87 @@
         android:paddingHorizontal="20dp"
         android:layout_marginTop="20dp">
 
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="70dp"
-            android:src="@drawable/facebook_img"
-            android:background="@drawable/image_shape"
-            android:padding="20dp"/>
-
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="70dp"
-            android:src="@drawable/google_img"
-            android:background="@drawable/image_shape"
-            android:padding="20dp"
+        <LinearLayout
+            android:id="@+id/facebookBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
             android:layout_weight="1"
-            android:layout_marginHorizontal="10dp"/>
+            style="@style/imageShape">
 
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="70dp"
-            android:background="@drawable/image_shape"
-            android:padding="20dp"
-            style="@style/appleImage"/>
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="5dp"
+                android:src="@drawable/facebook_img"/>
+
+            <TextView
+                android:id="@+id/facebookTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Facebook"
+                android:fontFamily="@font/urbanist_semibold"
+                android:textSize="16sp"
+                android:visibility="gone"
+                style="@style/textColorLight"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/googleBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="10dp"
+            style="@style/imageShape">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="5dp"
+                android:src="@drawable/google_img"/>
+
+            <TextView
+                android:id="@+id/googleTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Google"
+                android:fontFamily="@font/urbanist_semibold"
+                android:textSize="16sp"
+                android:visibility="gone"
+                style="@style/textColorLight"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/appleBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_weight="1"
+            style="@style/imageShape">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="5dp"
+                style="@style/appleImage"/>
+
+            <TextView
+                android:id="@+id/appleTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Apple"
+                android:fontFamily="@font/urbanist_semibold"
+                android:textSize="16sp"
+                android:visibility="gone"
+                style="@style/textColorLight"/>
+
+        </LinearLayout>
 
     </LinearLayout>
     
